--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -118,6 +118,23 @@ hr {
 
 }
 
+#video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+    margin-top: 90px;
+}
+
+#video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 /* //////////////////////// */
 @media (min-width: 768px) {
     .link-a {
