--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -135,6 +135,20 @@ hr {
     height: 100%;
 }
 
+@media (max-width: 500px) {
+    #video-container {
+        position: relative;
+        padding-bottom: 56.25%;
+        /* 16:9 aspect ratio */
+        height: 0;
+        overflow: hidden;
+        margin-top: 110px;
+    }
+}
+
+/* //////////////////////// */
+
+
 /* //////////////////////// */
 @media (min-width: 768px) {
     .link-a {
